test/classes/ferguson/generic-field/generic-field-integral-not-inited-record.chpl
record R {
  var i:integral;
}

proc test() {
  var rec:R(int);
  writeln(rec.type:string, " ", rec);
}
test();
